just tell change

--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-
+.backgroundcolor{
+	background-color: black;
+}
 .h1{
 	text-align: center;
-	color: red;
-	text-decoration: underline black;
-	text-decoration-style: double;
+	color: blue;
+	text-decoration: underline yellow;
+	text-decoration-style: wavy;
 	padding-top:10px ;
 }
 .h2{
 	margin-left: 10%;
 	color: blue;
-	text-decoration: underline black;
+	text-decoration: underline yellow;
 	text-decoration-style: solid;
 }
 .frame{
@@ -24,37 +26,40 @@
 }
 .ul {
 	line-height: 1.6em;
+	color: white;
 	margin-left: 13%;
 }
 .ingredient{
 	color: blue;
-	text-decoration: underline black;
+	text-decoration: underline yellow;
 	text-decoration-style: wavy;
 	margin-left:10% ;
 }
 .step{
 	color: blue;
-	text-decoration: underline black;
+	text-decoration: underline yellow;
 	text-decoration-style: wavy;
 	margin-left:10% ;
 }
 .ol li{
 	color: red;
-	text-decoration: underline black;
+	text-decoration: underline yellowk;
 	text-decoration-style: solid;
 	margin-left:12% ;
 }
 .ol p{
 	margin-left:14% ;
+	color: white;
 	line-height: 1.8em;
 }
 .n h2{
 	color: blue;
-	text-decoration: underline black;
+	text-decoration: underline yellow;
 	text-decoration-style: wavy;
 	margin-left:10% ;
 }
 .n p{
+	color: white;
 	line-height: 1.8em;
 	margin-left: 14%;
 }
